--- a/fastlane/metadata/android/screenshots.html
+++ b/fastlane/metadata/android/screenshots.html
@@ -158,6 +158,37 @@
         </td>
       </tr>
     </table>
+    <h1 id="eu-ES" class="language">eu-ES</h1>
+    <hr>
+    <table>
+      <tr>
+        <th colspan="4">
+          <a id="eu-ES-phoneScreenshots" class="deviceName" href="#eu-ES-phoneScreenshots">phoneScreenshots</a>
+        </th>
+      </tr>
+      <tr>
+        <td>
+          <a href="./eu-ES/images/phoneScreenshots/1_launcher.png" target="_blank" class="screenshotLink">
+            <img class="screenshot" src="./eu-ES/images/phoneScreenshots/1_launcher.png" style="width: 100%;" alt="eu-ES phoneScreenshots" data-counter="13">
+          </a>
+        </td>
+        <td>
+          <a href="./eu-ES/images/phoneScreenshots/2_setup.png" target="_blank" class="screenshotLink">
+            <img class="screenshot" src="./eu-ES/images/phoneScreenshots/2_setup.png" style="width: 100%;" alt="eu-ES phoneScreenshots" data-counter="14">
+          </a>
+        </td>
+        <td>
+          <a href="./eu-ES/images/phoneScreenshots/3_color_picker.png" target="_blank" class="screenshotLink">
+            <img class="screenshot" src="./eu-ES/images/phoneScreenshots/3_color_picker.png" style="width: 100%;" alt="eu-ES phoneScreenshots" data-counter="15">
+          </a>
+        </td>
+        <td>
+          <a href="./eu-ES/images/phoneScreenshots/4_settings.png" target="_blank" class="screenshotLink">
+            <img class="screenshot" src="./eu-ES/images/phoneScreenshots/4_settings.png" style="width: 100%;" alt="eu-ES phoneScreenshots" data-counter="16">
+          </a>
+        </td>
+      </tr>
+    </table>
     <h1 id="fr-FR" class="language">fr-FR</h1>
     <hr>
     <table>
@@ -169,22 +200,22 @@
       <tr>
         <td>
           <a href="./fr-FR/images/phoneScreenshots/1_launcher.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./fr-FR/images/phoneScreenshots/1_launcher.png" style="width: 100%;" alt="fr-FR phoneScreenshots" data-counter="13">
+            <img class="screenshot" src="./fr-FR/images/phoneScreenshots/1_launcher.png" style="width: 100%;" alt="fr-FR phoneScreenshots" data-counter="17">
           </a>
         </td>
         <td>
           <a href="./fr-FR/images/phoneScreenshots/2_setup.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./fr-FR/images/phoneScreenshots/2_setup.png" style="width: 100%;" alt="fr-FR phoneScreenshots" data-counter="14">
+            <img class="screenshot" src="./fr-FR/images/phoneScreenshots/2_setup.png" style="width: 100%;" alt="fr-FR phoneScreenshots" data-counter="18">
           </a>
         </td>
         <td>
           <a href="./fr-FR/images/phoneScreenshots/3_color_picker.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./fr-FR/images/phoneScreenshots/3_color_picker.png" style="width: 100%;" alt="fr-FR phoneScreenshots" data-counter="15">
+            <img class="screenshot" src="./fr-FR/images/phoneScreenshots/3_color_picker.png" style="width: 100%;" alt="fr-FR phoneScreenshots" data-counter="19">
           </a>
         </td>
         <td>
           <a href="./fr-FR/images/phoneScreenshots/4_settings.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./fr-FR/images/phoneScreenshots/4_settings.png" style="width: 100%;" alt="fr-FR phoneScreenshots" data-counter="16">
+            <img class="screenshot" src="./fr-FR/images/phoneScreenshots/4_settings.png" style="width: 100%;" alt="fr-FR phoneScreenshots" data-counter="20">
           </a>
         </td>
       </tr>
@@ -200,22 +231,22 @@
       <tr>
         <td>
           <a href="./it-IT/images/phoneScreenshots/1_launcher.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./it-IT/images/phoneScreenshots/1_launcher.png" style="width: 100%;" alt="it-IT phoneScreenshots" data-counter="17">
+            <img class="screenshot" src="./it-IT/images/phoneScreenshots/1_launcher.png" style="width: 100%;" alt="it-IT phoneScreenshots" data-counter="21">
           </a>
         </td>
         <td>
           <a href="./it-IT/images/phoneScreenshots/2_setup.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./it-IT/images/phoneScreenshots/2_setup.png" style="width: 100%;" alt="it-IT phoneScreenshots" data-counter="18">
+            <img class="screenshot" src="./it-IT/images/phoneScreenshots/2_setup.png" style="width: 100%;" alt="it-IT phoneScreenshots" data-counter="22">
           </a>
         </td>
         <td>
           <a href="./it-IT/images/phoneScreenshots/3_color_picker.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./it-IT/images/phoneScreenshots/3_color_picker.png" style="width: 100%;" alt="it-IT phoneScreenshots" data-counter="19">
+            <img class="screenshot" src="./it-IT/images/phoneScreenshots/3_color_picker.png" style="width: 100%;" alt="it-IT phoneScreenshots" data-counter="23">
           </a>
         </td>
         <td>
           <a href="./it-IT/images/phoneScreenshots/4_settings.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./it-IT/images/phoneScreenshots/4_settings.png" style="width: 100%;" alt="it-IT phoneScreenshots" data-counter="20">
+            <img class="screenshot" src="./it-IT/images/phoneScreenshots/4_settings.png" style="width: 100%;" alt="it-IT phoneScreenshots" data-counter="24">
           </a>
         </td>
       </tr>
@@ -231,22 +262,22 @@
       <tr>
         <td>
           <a href="./ru-RU/images/phoneScreenshots/1_launcher.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./ru-RU/images/phoneScreenshots/1_launcher.png" style="width: 100%;" alt="ru-RU phoneScreenshots" data-counter="21">
+            <img class="screenshot" src="./ru-RU/images/phoneScreenshots/1_launcher.png" style="width: 100%;" alt="ru-RU phoneScreenshots" data-counter="25">
           </a>
         </td>
         <td>
           <a href="./ru-RU/images/phoneScreenshots/2_setup.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./ru-RU/images/phoneScreenshots/2_setup.png" style="width: 100%;" alt="ru-RU phoneScreenshots" data-counter="22">
+            <img class="screenshot" src="./ru-RU/images/phoneScreenshots/2_setup.png" style="width: 100%;" alt="ru-RU phoneScreenshots" data-counter="26">
           </a>
         </td>
         <td>
           <a href="./ru-RU/images/phoneScreenshots/3_color_picker.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./ru-RU/images/phoneScreenshots/3_color_picker.png" style="width: 100%;" alt="ru-RU phoneScreenshots" data-counter="23">
+            <img class="screenshot" src="./ru-RU/images/phoneScreenshots/3_color_picker.png" style="width: 100%;" alt="ru-RU phoneScreenshots" data-counter="27">
           </a>
         </td>
         <td>
           <a href="./ru-RU/images/phoneScreenshots/4_settings.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./ru-RU/images/phoneScreenshots/4_settings.png" style="width: 100%;" alt="ru-RU phoneScreenshots" data-counter="24">
+            <img class="screenshot" src="./ru-RU/images/phoneScreenshots/4_settings.png" style="width: 100%;" alt="ru-RU phoneScreenshots" data-counter="28">
           </a>
         </td>
       </tr>
@@ -262,22 +293,22 @@
       <tr>
         <td>
           <a href="./zh-CN/images/phoneScreenshots/1_launcher.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/1_launcher.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="25">
+            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/1_launcher.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="29">
           </a>
         </td>
         <td>
           <a href="./zh-CN/images/phoneScreenshots/2_setup.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/2_setup.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="26">
+            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/2_setup.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="30">
           </a>
         </td>
         <td>
           <a href="./zh-CN/images/phoneScreenshots/3_color_picker.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/3_color_picker.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="27">
+            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/3_color_picker.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="31">
           </a>
         </td>
         <td>
           <a href="./zh-CN/images/phoneScreenshots/4_settings.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/4_settings.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="28">
+            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/4_settings.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="32">
           </a>
         </td>
       </tr>
