feat: Add turkish language

--- a/fastlane/metadata/android/screenshots.html
+++ b/fastlane/metadata/android/screenshots.html
@@ -282,6 +282,37 @@
         </td>
       </tr>
     </table>
+    <h1 id="tr-TR" class="language">tr-TR</h1>
+    <hr>
+    <table>
+      <tr>
+        <th colspan="4">
+          <a id="tr-TR-phoneScreenshots" class="deviceName" href="#tr-TR-phoneScreenshots">phoneScreenshots</a>
+        </th>
+      </tr>
+      <tr>
+        <td>
+          <a href="./tr-TR/images/phoneScreenshots/1_launcher.png" target="_blank" class="screenshotLink">
+            <img class="screenshot" src="./tr-TR/images/phoneScreenshots/1_launcher.png" style="width: 100%;" alt="tr-TR phoneScreenshots" data-counter="29">
+          </a>
+        </td>
+        <td>
+          <a href="./tr-TR/images/phoneScreenshots/2_setup.png" target="_blank" class="screenshotLink">
+            <img class="screenshot" src="./tr-TR/images/phoneScreenshots/2_setup.png" style="width: 100%;" alt="tr-TR phoneScreenshots" data-counter="30">
+          </a>
+        </td>
+        <td>
+          <a href="./tr-TR/images/phoneScreenshots/3_color_picker.png" target="_blank" class="screenshotLink">
+            <img class="screenshot" src="./tr-TR/images/phoneScreenshots/3_color_picker.png" style="width: 100%;" alt="tr-TR phoneScreenshots" data-counter="31">
+          </a>
+        </td>
+        <td>
+          <a href="./tr-TR/images/phoneScreenshots/4_settings.png" target="_blank" class="screenshotLink">
+            <img class="screenshot" src="./tr-TR/images/phoneScreenshots/4_settings.png" style="width: 100%;" alt="tr-TR phoneScreenshots" data-counter="32">
+          </a>
+        </td>
+      </tr>
+    </table>
     <h1 id="zh-CN" class="language">zh-CN</h1>
     <hr>
     <table>
@@ -293,22 +324,22 @@
       <tr>
         <td>
           <a href="./zh-CN/images/phoneScreenshots/1_launcher.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/1_launcher.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="29">
+            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/1_launcher.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="33">
           </a>
         </td>
         <td>
           <a href="./zh-CN/images/phoneScreenshots/2_setup.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/2_setup.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="30">
+            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/2_setup.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="34">
           </a>
         </td>
         <td>
           <a href="./zh-CN/images/phoneScreenshots/3_color_picker.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/3_color_picker.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="31">
+            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/3_color_picker.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="35">
           </a>
         </td>
         <td>
           <a href="./zh-CN/images/phoneScreenshots/4_settings.png" target="_blank" class="screenshotLink">
-            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/4_settings.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="32">
+            <img class="screenshot" src="./zh-CN/images/phoneScreenshots/4_settings.png" style="width: 100%;" alt="zh-CN phoneScreenshots" data-counter="36">
           </a>
         </td>
       </tr>
